--- a/blog-posts/post3.html
+++ b/blog-posts/post3.html
@@ -1170,6 +1170,7 @@
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://wa.me/254722555316"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
                 
@@ -1191,8 +1192,8 @@
                 <div class="footer-contact">
                     <h4>Contact Us</h4>
                     <p><i class="fas fa-map-marker-alt"></i> Nairobi County, Kenya</p>
-                    <p><i class="fas fa-envelope"></i> info@gahi.org</p>
-                    <p><i class="fas fa-phone"></i> +254 700 000 000</p>
+                    <p><i class="fas fa-envelope"></i> mohamudmaalim47@gmail.com</p>
+                    <p><i class="fas fa-phone"></i> +254722555316</p>
                     <p><i class="fas fa-envelope"></i> energy@gahi.org (Energy Programs)</p>
                 </div>
             </div>
